--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-opencv-python-headless==4.5.5.64
-dlib==19.22.1
+opencv-python==4.7.0.72
+dlib==19.24.1
 imutils==0.5.4
-Pillow==9.2.0
-pygame==2.1.2
-scipy==1.9.0
+Pillow==9.4.0
+pygame==2.5.0
+scipy==1.11.1
